@@ -14,6 +14,7 @@ $ Renamed Master.invokeEvent() to Master.triggerEvent()
 + Added Master.getActiveTimer()
 + Added Master.triggerSingleEvent()
 + Added Master.triggerSingleEventArray()
++ Added Master.syncChannelLists()
 
 
 Version 1.1.0 (15/05/2010)
